--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -4,17 +4,24 @@
 
 @tailwind utilities;
 
-@layer components {
-    .btn-blue {
-        @apply py-2 px-4 m-2 bg-blue-400 text-white font-semibold
-        rounded-lg shadow-md
-        transition duration-300 ease-in-out
-        transform hover:scale-110 hover:bg-blue-600
-        focus:outline-none focus:ring-2
-        focus:bg-blue-400 focus:ring-blue-600
-        focus:ring-opacity-75;
+@layer base {
+    p {
+        @apply font-sans text-base font-normal tracking-wide text-black antialiased;
     }
-    .btn-mytest{
-        @apply ui-btn ui-btn-outline
+    button>p {
+        @apply text-center
+    }
+
+}
+
+@layer components {
+    .btn-yellow {
+        @apply py-0.5 px-1 bg-amber-400
+        rounded-lg shadow-md
+        hover:bg-amber-300
+        focus:outline-none focus:ring-2
+        focus:ring-amber-600
+        focus:ring-opacity-75
+        active:bg-yellow-500
     }
 }
